Fixed actions yml scripts

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,7 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
-'on':
+"on":
   push:
     branches:
       - master
@@ -10,21 +10,20 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     env:
-      - REACT_APP_VERSION: ${{ secrets.REACT_APP_VERSION}}
-      - REACT_APP_API_KEY: "${{secrets.REACT_APP_API_KEY}}"
-      - REACT_APP_AUTH_DOMAIN: "${{secrets.REACT_APP_AUTH_DOMAIN}}"
-      - REACT_APP_PROJECT_ID: "${{secrets.REACT_APP_PROJECT_ID}}"
-      - REACT_APP_STORAGE_BUCKET: "${{secrets.REACT_APP_STORAGE_BUCKET}}"
-      - REACT_APP_MESSAGING_SENDER: "${{secrets.REACT_APP_MESSAGING_SENDER}}"
-      - REACT_APP_APP_ID: "${{secrets.REACT_APP_APP_ID}}"
-      - REACT_APP_MEASUREMENT_ID: "${{secrets.REACT_APP_MEASUREMENT_ID}}"
+      REACT_APP_API_KEY: "${{secrets.REACT_APP_API_KEY}}"
+      REACT_APP_AUTH_DOMAIN: "${{secrets.REACT_APP_AUTH_DOMAIN}}"
+      REACT_APP_PROJECT_ID: "${{secrets.REACT_APP_PROJECT_ID}}"
+      REACT_APP_STORAGE_BUCKET: "${{secrets.REACT_APP_STORAGE_BUCKET}}"
+      REACT_APP_MESSAGING_SENDER: "${{secrets.REACT_APP_MESSAGING_SENDER}}"
+      REACT_APP_APP_ID: "${{secrets.REACT_APP_APP_ID}}"
+      REACT_APP_MEASUREMENT_ID: "${{secrets.REACT_APP_MEASUREMENT_ID}}"
     steps:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FIR_RECIPES_65C55 }}'
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_FIR_RECIPES_65C55 }}"
           channelId: live
           projectId: fir-recipes-65c55
